--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://wqq_hust.github.io/404.html" />
+<meta property="og:url" content="http://GEOwuGRAwuPHY.github.io/404.html" />
 
 
 <meta itemprop="name" content="404 Page not found">
@@ -51,7 +51,7 @@
     <div class="bg-black">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="http://wqq_hust.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="http://GEOwuGRAwuPHY.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
       My New Hugo Site
     </a>
     <div class="flex-l items-center">
@@ -109,7 +109,7 @@
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://wqq_hust.github.io/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://GEOwuGRAwuPHY.github.io/" >
     &copy; 2019 My New Hugo Site
   </a>
     <div>
