--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>404 Page not found - My New Hugo Site</title>
-    <meta property="og:title" content="404 Page not found - My New Hugo Site">
+    <title>404 Page not found - Wu Qiqi&#39;s Blog</title>
+    <meta property="og:title" content="404 Page not found - Wu Qiqi&#39;s Blog">
     
     <meta name="twitter:card" content="summary">
 
@@ -33,7 +33,7 @@
   
   <body class="/404.html">
     <header class="masthead">
-      <h1><a href="/">My New Hugo Site</a></h1>
+      <h1><a href="/">Wu Qiqi&#39;s Blog</a></h1>
 
 
 
@@ -46,6 +46,8 @@
   </label>
   <ul>
   
+  
+  <li><a href="/aboutme/">About Me</a></li>
   
   <li><a href="/post/">Post</a></li>
   
