--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -18,12 +18,12 @@
       <meta property="description" content="姓名：吴琪琦
 QQ : 458016149
 Tel : 159-2708-8740
-华中科技大学新闻学院，南京大学新闻学院
+华中科技大学新闻与信息传播学院； 南京大学新闻与传播学院
 ">
       <meta property="og:description" content="姓名：吴琪琦
 QQ : 458016149
 Tel : 159-2708-8740
-华中科技大学新闻学院，南京大学新闻学院
+华中科技大学新闻与信息传播学院； 南京大学新闻与传播学院
 ">
       
     
@@ -89,7 +89,8 @@ Tel : 159-2708-8740
 
 <p>Tel : 159-2708-8740</p>
 
-<p>华中科技大学新闻学院，南京大学新闻学院</p>
+<p>华中科技大学新闻与信息传播学院；
+南京大学新闻与传播学院</p>
 
 
 <ul>
