--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -17,12 +17,12 @@
       
       <meta property="description" content="姓名：吴琪琦
 QQ : 458016149
-Tel : 159-2708-8740
+WeChat : WQ54775251
 华中科技大学新闻与信息传播学院； 南京大学新闻与传播学院
 ">
       <meta property="og:description" content="姓名：吴琪琦
 QQ : 458016149
-Tel : 159-2708-8740
+WeChat : WQ54775251
 华中科技大学新闻与信息传播学院； 南京大学新闻与传播学院
 ">
       
@@ -87,7 +87,7 @@ Tel : 159-2708-8740
 
 <p>QQ : 458016149</p>
 
-<p>Tel : 159-2708-8740</p>
+<p>WeChat : WQ54775251</p>
 
 <p>华中科技大学新闻与信息传播学院；
 南京大学新闻与传播学院</p>
